<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maydana.roman.problemas.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <Button
        android:onClick="conversion"
        android:layout_margin="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/conversi_n"
        />
    <Button
        android:onClick="literal"
        android:layout_margin="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/literal"
        />

    <Button
        android:onClick="juego"
        android:layout_margin="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/juego"
        />
    <Button
        android:onClick="pagar"
        android:layout_margin="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pagar"
        />
    <Button
        android:onClick="uva11450"
        android:layout_margin="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="UVA 11450"
        />



</LinearLayout>
