<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.maydana.roman.problemas.ConversionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c_m"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/cmEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_personalizado"
            android:hint="Indtroduzca 1 numero"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/m"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/mEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_personalizado"
            android:hint="Indtroduzca 1 numero"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/k_m"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/kmEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_personalizado"
            android:hint="Indtroduzca 1 numero"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="convierte"
            android:text="@string/conveierte" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="limpiar"
            android:text="@string/limpiar" />
    </LinearLayout>

</LinearLayout>
