<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.maydana.roman.problemas.LiteralActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/nro"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/numeroEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_personalizado"
            android:hint="Indtroduzca 1 numero"
            android:inputType="number" />

    </LinearLayout>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/literal"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/literalTextView"
        android:layout_width="330dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:background="@drawable/tex_view_personalizado"
        android:textSize="16sp"
        android:textColor="#ffff"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="literal"
                android:text="@string/literal"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="limpiar"
                android:text="@string/limpiar" />
        </LinearLayout>
</LinearLayout>
